--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -36,8 +36,33 @@ video {
   margin-top: 32px;
 }
 
+.btn {
+  padding: 8px 20px;
+  border-radius: 2px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  text-decoration: none;
+  color: #242424;
+}
+.btn--primary {
+  background-color: var(--primary);
+  color: #242424;
+  border: 1px solid var(--primary);
+}
+
 .hero-btns .btn {
   margin: 6px;
+}
+.hero-btn--large {
+  padding: 12px 26px;
+  font-size: 20px;
+}
+.hero-btn--large:hover {
+  transition: all 0.3s ease-out;
+  background: #fff;
+  color: #242424;
+  transition: 250ms;
 }
 
 .fa-play-circle {
