--- a/src/components/Collection.css
+++ b/src/components/Collection.css
@@ -4,7 +4,20 @@
 }
 
 h1 {
-  text-align: center;
+  text-align: vertical;
+}
+.btn {
+  border-radius: 2px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  text-decoration: none;
+  flex-direction: column;
+  justify-content: center;
+  color: #242424;
+  padding: 12px 26px;
+
+  font-size: 20px;
 }
 
 .cards__container {
@@ -14,6 +27,10 @@ h1 {
   max-width: 1120px;
   width: 90%;
   margin: 0 auto;
+}
+
+.fa-play-search {
+  margin-left: 4px;
 }
 
 .cards__wrapper {
@@ -97,6 +114,29 @@ h1 {
   color: #252e48;
   font-size: 18px;
   line-height: 24px;
+}
+
+.browse-button > p {
+  margin-top: 8px;
+  color: #fff;
+  font-size: 32px;
+  align-items: center;
+
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+.browser-container {
+  background: url("https://media.giphy.com/media/12dC9ZtdU9mk4o/giphy.gif")
+    center;
+
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+  object-fit: contain;
 }
 
 @media only screen and (min-width: 1200px) {
